[package]
authors = ["deman4ik <shatalov@cryptuoso.com>"]
edition = "2021"
name = "ta-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
yata = {version= "0.6.1", features = ["period_type_u16"]}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
